# ai-research-assistant

./: main.py  pyproject.toml
data/chroma_db/: chroma.sqlite3
src/: config.py  ingest.py  llm.py  main.py  memory.py
src/agents/: research_agent.py  research_graph.py  research_trace.py
src/models/: chat_message.py  research_result.py  role.py
src/prompts/: chat_prompt.py  rag_prompt.py  system_prompt.py
src/rag/: a_document_loader.py  b_text_splitter.py  c_embedding_service.py  d_vector_store.py  e_retriever.py  f_rag_service.py
src/services/: chat_service.py
src/tools/: pdf_search.py  web_search.py  website_reader.py
src/utils/: LangChain_messages.py  logger.py
