[project]
name = "01-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.34.2",
]
